--- a/client/package.json
+++ b/client/package.json
@@ -17,15 +17,19 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "antd": "^5.3.0",
-    "axios": "^1.3.4",
+    "axios": "0.27.2",
     "bootstrap": "5.2.3",
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-bootstrap": "2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "4.8.0",
+    "react-intl": "6.2.10",
+    "react-pro-sidebar": "0.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "9.0.7",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.2",
     "sass": "1.58.3",
